--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -16,7 +16,7 @@
 <body onload="insertElements(2,true)">
 
     <header></header>
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
     <article>
 
         <h1>
