--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -17,7 +17,7 @@
 
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
             Pandora's Box
@@ -26,18 +26,18 @@
             by Claudio Surmon
         </p>
 
+
         <figure>
-            <img src="../images/X-47B_operating_in_the_Atlantic_Test_Range_(modified).jpg" alt="PlaceHolder"
-                width="800px">
+            <img src="../images/X-47B_operating_in_the_Atlantic_Test_Range_(modified).jpg" alt="PlaceHolder">
             <figcaption>
-                Placeholder
+                X-47B operating in the Atlantic Test range, public domain Credit: US Navy
             </figcaption>
         </figure>
 
         <p>
             Machine learning in recent years has opened a pandora’s box, one that can never be closed again. Pandora’s
             box is a mythological artefact which has become synonymous with a source of large amounts of unexpected
-            trouble and strife. So, what does this have to do with machine learning.
+            trouble and strife. So, what does this have to do with machine learning?
             <br><br>
             Although machine learning has the potential to create wonders of technology, with promises of a better life
             for all, the opposite potential has reared its ugly head. Recently a creator at the forefront of computer
@@ -48,6 +48,7 @@
 
 
         <!-- Tweet embedding -->
+        <!--
         <blockquote class="twitter-tweet tw-align-center" data-lang="en">
             <p lang="en" dir="ltr">This is huge.<br><br>The creator of the YOLO algorithms, which (along with SSD) set
                 much of the path of modern object detection, has stopped doing any computer vision research due to
@@ -58,7 +59,7 @@
                 2020</a>
         </blockquote>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+        -->
         <p>
             I don’t think these inventors, for the most part, envisioned the long-term effects of the technology they
             were working on. When these people were sitting up late at night, caffeinated in the empty computer science
@@ -101,8 +102,10 @@
             in Iraq and Afghanistan. An example of the system in action can be seen in the video below.
 
         </p>
+        <!--
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hcNE5VHLldY" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->
         <p>
             But where do you draw the line, it is right and good to defend but what about attacking?
             During a meeting at the UN, 82 countries met to discuss the banning of automated weaponry, although most
