--- a/blogs/index.html
+++ b/blogs/index.html
@@ -20,7 +20,7 @@
 <body onload="insertElements(2)">
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
 
     <main>
         <h1>
