--- a/construction/index.html
+++ b/construction/index.html
@@ -17,7 +17,7 @@
 <body onload="insertElements(5)">
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
 
     <main>
 
@@ -55,7 +55,7 @@
         </p>
         <figure>
             <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
-                longdesc="Image of William Surmon holding browning machine gun" width="384">
+                longdesc="Image of William Surmon holding browning machine gun">
             <figcaption>
                 Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the South
                 African border wars. This image helps capture part of the character i wish to create.
@@ -75,7 +75,7 @@
             The colour palette was changed to be a more calming set of colours as can be seen below. The previous style
             was overly saturated on reflection.
         </p>
-        <img src=../images/Colour-Palette-2.PNG alt="Color Palette" longdesc="This is a PlaceHolder" width="600">
+        <img src=../images/Colour-Palette-2.PNG alt="Color Palette" longdesc="This is a PlaceHolder">
 
         <p>
             The mobile oriented menu was removed due to the bodged implementation and new focus on creating a more
@@ -91,7 +91,7 @@
             The tagline is meant to capture the fact that Giovanni had a history with warfare. The logo utilises a clean
             look with sharp straight lines indicative of military style.
         </p>
-        <img src=../images/Logo-clear-1024.png alt="Logo" width="600">
+        <img src=../images/Logo-clear-1024.png alt="Logo">
 
         <h3>
             Blog List generation.
@@ -110,10 +110,16 @@
             manipulate the generated cards in javascript and provide more flexibility. Using this i created a basic page
             system for the blog index.
         </p>
+        <h3>
+            Responsive design
+        </h3>
+        <p>
+            Due to me developing on desktop, I had neglected the experience for mobile and tablet users, as such I
+            redesigned the interface such that the page now automatically rescales accordingly.
+        </p>
+    </main>
 
-        < </main>
-
-            <footer></footer>
+    <footer></footer>
 
 </body>
 
