--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
 <body onload="insertElements(3)">
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
 
     <main>
 
