--- a/services/index.html
+++ b/services/index.html
@@ -17,7 +17,7 @@
 <body onload="insertElements(4)">
     <header></header>
 
-    <nav> </nav>
+    <nav class="navbar" id="navbar"> </nav>
 
     <main>
         <h1>Services Offered</h1>
