--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 <body onload="insertElements(1)">
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
 
     <main>
         <h1>
