--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -17,7 +17,7 @@
 
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
             Meta Meta-data blog post
