--- a/blogs/blog7.html
+++ b/blogs/blog7.html
@@ -17,7 +17,7 @@
 
     <header></header>
 
-    <nav></nav>
+    <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
             Teaching and learning online - An auditory approach
