--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body onload="insertElements(0)">
     <header></header>
 
-    <nav> </nav>
+    <nav class="navbar" id="navbar"> </nav>
 
     <main>
-        <img src="images/Logo-clear-1024.png" alt="Logo" style="width:512px;height:512px;">
+        <img src="images/Logo-clear-1024.png" alt="Logo" style="width:100%;">
     </main>
 
     <footer>
