--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -27,8 +27,7 @@
         </p>
 
         <figure>
-            <img src="../images/Arpanet_logical_map.png" alt="Logical Map of Arpanet circa 1977" width="640"
-                height="458">
+            <img src="../images/Arpanet_logical_map.png" alt="Logical Map of Arpanet circa 1977">
             <figcaption>
                 Logical Map of ARPANET circa 1977
                 </br>
