--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Giovanni's Company during the Outbreak
+        Suzzi LTD during the Outbreak
     </title>
 </head>
 
@@ -20,19 +20,38 @@
     <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
-            Giovanni's Company during the Outbreak
+            Suzzi Inc. during the Outbreak
         </h1>
         <p id="info">
             by Giovanni Suzzi
         </p>
         <figure>
-            <img src="" alt="Blank">
+            <img src="../images/Open.png" alt="Blank">
             <figcaption>
-                Blank
+                Open LED Sign, Credit:PXfuel, Free for commercial use.
             </figcaption>
         </figure>
         <p>
-            Text
+            During the current pandemic, as you may know, a nationwide lock-down has been enacted. As such all
+            businesses that are not considered critical have been forced to close their doors. We here at Suzzi LTD have
+            decided to self-isolate to assist in the prevention of spreading the virus. However, we will resume work in
+            an online capacity to maintain deadlines with our clients. We will be unable to do workplace deployments
+            until such time as the lockdown has been reduced after May 1st.
+            <br><br>
+            To assist in this transition, I have allowed various staff in the office to take their desktop workstations
+            from the office to use at home if necessary. Luckily most of my staff have good internet connections,
+            however, my one staff member does not have one, relying on a fixed data package. To help with this I went
+            through the office networking supplies and retrieved a long-range wireless bridge we had used for an offsite
+            project a few years ago. Using this I established a internet connection from their house to the office so
+            that they may piggyback off the office’s business internet (Lucky her!).
+            <br><br>
+            To assist in combatting the virus globally, I have entered the workplace into the Folding@Home initiative.
+            This way we can help contribute to the research for COVID-19. To do this I pulled out all the workstation
+            PCs out of storage and the remaining workstations to be permanently be computing for Folding@Home. This
+            means about 256 threads of raw performance.
+            <br><br>
+            To everyone else at home, from us at Suzzi we wish you safety for you and your loved ones
+
         </p>
     </article>
     <nav class="blogNav"></nav>
