--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -34,6 +34,28 @@
             </figcaption>
         </figure>
         <p>
+            In these uncertain times, I wanna break this with something different. What can we offer one another to help
+            each other? As a tech company, we have been working from home and are familiar with the tech out there,
+            This time has proven to be a challenging time for everyone, especially those less fortunate. The biggest
+            issue found to be plaguing me and my colleagues has been loss of motivation and work ethic. Whereby we’d
+            spend hours staring at blank computer screens and getting no work done. This video was shared around the
+            workplace. And encouraged good work life and home life balance. Perhaps it could help you, the reader, too.
+            https://www.youtube.com/watch?v=snAhsXyO3Ck.
+            <br><br>
+            In a continued effort to assist our local community, we at Suzzi Inc have decided to offer a discount on IT
+            solutions and integration for small to medium sized businesses, to assist businesses that are struggling to
+            make the jump to online only work.
+            <br><br>
+            Though we are doing fine, we are 6 paces away from struggle, but this doesn’t stop us from helping our
+            community because we are all in the same boat. Suzzi Inc. has also bought a few thousand masks and
+            distributed them amongst the local community. The folding@home initiative has been going great,
+            <br><br>
+            On a more personal note, me and my wife have been doing grocery runs for a few of the elderly people in our
+            neighbourhood, especially those who cannot leave due to risk or otherwise. Every little bit helps.
+            <br><br>
+            To our readers, and to their loved ones - we wish you safety
+            <br><br>
+            The Suzzi Team
 
         </p>
     </article>
