--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -27,7 +27,7 @@
         </p>
 
         <figure>
-            <img src="../images/Henry-Cat2.jpg" alt="Henry the cat" width="512">
+            <img src="../images/Henry-Cat2.jpg" alt="Henry the cat">
             <figcaption>
                 An example of a photograph containing meta-tags showing Henry the cat.
                 </br>
