--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar"> </nav>
 
     <main>
-        <img src="images/Logo-clear-1024.png" alt="Logo" style="width:100%;">
+        <img src="images/Logo-clear-1024.png" alt="Logo">
     </main>
 
     <footer>
