--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -32,25 +32,29 @@
             </figcaption>
         </figure>
         <p>
-            During the current pandemic, as you may know, a nationwide lock-down has been enacted. As such all
-            businesses that are not considered critical have been forced to close their doors. We here at Suzzi LTD have
-            decided to self-isolate to assist in the prevention of spreading the virus. However, we will resume work in
-            an online capacity to maintain deadlines with our clients. We will be unable to do workplace deployments
-            until such time as the lockdown has been reduced after May 1st.
+            During the current pandemic, as you may know, a nationwide lock-down has been enacted. As such, all
+            businesses that are not considered critical have been forced to close their doors. We here at Suzzi LTD,
+            have decided to self-isolate to assist in the prevention of the covid-19 spread. However, we will continue
+            work in an online capacity to maintain deadlines with our clients. Workplace deployments will not be
+            possible until such time as the lockdown has been reduced after May 1st.
             <br><br>
-            To assist in this transition, I have allowed various staff in the office to take their desktop workstations
-            from the office to use at home if necessary. Luckily most of my staff have good internet connections,
-            however, my one staff member does not have one, relying on a fixed data package. To help with this I went
-            through the office networking supplies and retrieved a long-range wireless bridge we had used for an offsite
-            project a few years ago. Using this I established a internet connection from their house to the office so
-            that they may piggyback off the office’s business internet (Lucky her!).
+            To assist in this transition, I have allowed various staff (in the office) to take their desktop
+            workstations home with them so that they can continue to work at home. Luckily, most of my staff have good
+            internet connections, however, one of my staff members relies on a fixed data package (which can be
+            unreliable at times). To help with this I went through the office networking supplies and retrieved a
+            long-range wireless bridge we had used for an offsite project a few years ago. Using this, I established an
+            internet connection from her house to the office so that she may piggyback off the office’s business
+            internet (Lucky her!).
             <br><br>
             To assist in combatting the virus globally, I have entered the workplace into the Folding@Home initiative.
-            This way we can help contribute to the research for COVID-19. To do this I pulled out all the workstation
-            PCs out of storage and the remaining workstations to be permanently be computing for Folding@Home. This
-            means about 256 threads of raw performance.
+            This way we can help contribute to the research for COVID-19 by (letting them use your PCs processing
+            power). I signed up all the remaining workstations in the office, including the ones I pulled out of
+            storage. This means about 256 threads of raw performance. These workstations will be permanently computing
+            for Folding@Home until we are able to return to the office.
             <br><br>
-            To everyone else at home, from us at Suzzi we wish you safety for you and your loved ones
+            To our readers, and to their loved ones - we wish you safety
+            <br><br>
+            The Suzzi Team
 
         </p>
     </article>
