--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -23,7 +23,7 @@
             Template
         </h1>
         <p id="info">
-            by Claudio Surmon
+            by Giovanni Suzzi
         </p>
         <figure>
             <img src="../images/PlaceHolder.png" alt="PlaceHolder">
