--- a/blogs/blog11.html
+++ b/blogs/blog11.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        Divide by zero
     </title>
 </head>
 
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
-            Template
+            Divide by zero
         </h1>
         <p id="info">
             by Claudio Surmon
@@ -35,6 +35,80 @@
         </figure>
         <p>
 
+            The internet is meant to be the great equaliser. Where everyone is equal, and the prejudice of the real
+            world is gone. However, one of the major limiting factors is the devices through which we access the
+            internet Because of the necessity for an internet connection and devices, not everyone has the same level of
+            access globally. Even though the original intention was good, cracks have formed, this is known as the
+            digital divide. But its more than just access, it extends to the understanding and the creation of content
+            on the internet.
+            <br><br>
+            The digital divide appears in multiple ways; in how certain areas of the world cannot afford internet
+            connections, where certain age groups cannot understand the how these systems work, or even just entire
+            areas being restricted from their access. For instance, there are areas of Africa where for a yearly
+            subscription to broadband internet costs more than the average yearly salary, up to 50 times as much!
+            (citation to that towards thing).
+            <br><br>
+            There are numerous factors that could affect these performance metrics. Far too many to list in their
+            entirety. As such I will be speculating why these problems perpetuate themselves.
+            <br><br>
+        </p>
+        <h2>1. It was created in English speaking country for those people</h2>
+        <p>
+            The primary language used on the internet is English, without question, W3Techs estimated the proportion of
+            languages used in the top 10 million websites to be 59.6% English, with the second most being Russian with
+            8.6%. This probably came from the fact that the internet was created in an English-speaking country for an
+            English-Speaking country. This causes the platform to far more friendly towards English speaking users and
+            dissuading other language users.
+            <br><br>
+            This is also visible in the actual framework of the internet, where most coding languages used are English
+            based, using the Latin alphabet and English words (like for, if, while etc). This makes it far harder for
+            non-native English speakers to learn to code as they must use words or even characters, they are not
+            familiar with.
+            <br><br>
+            Strangely enough, even though a lot of English based languages are used, some weren’t created in a English
+            speaking territory, like Ruby being from Japan, Lua from Brazil and Python from the Netherlands. In these
+            cases, the choice of a foreign language being used for the coding was due to wanting to appeal to an
+            international audience. This helps perpetuate the use of English almost exclusively.
+        </p>
+        <h2>2. Other countries joined in later, they had less time to create content.</h2>
+        <p>
+            If you’re in south Africa accessing a website in the united states, its not like you must go outside get a
+            compass and point to the USA to get signal, in general internet access is all or nothing. If you’re in range
+            of a tower, the location of a website doesn’t matter. (There are cases where proximity to the server
+            matters, like gaming, but this is more a time factor over a product quality factor) As such you as a
+            consumer would want to use the best services on the internet, regardless of location. However, this causes
+            the side-effect of the largest and best websites (usually US based) to grow larger and reinforces their
+            monopoly.
+            <br><br>
+            For example, there are other online video-streaming services besides YouTube, but because YouTube has more
+            users, more content creators, better monetisation among other reasons, people gravitate to this platform
+            even with all the controversy surrounding it. For instance, one of the largest YouTuber’s, PewDiePie,
+            probably chose YouTube as it was the largest platform at the time and still is. Even though the platform
+            “Dailymotion” based in France was more localised to him.
+        </p>
+        <h2>3. Good things attract good people</h2>
+        <P>
+            Biases reinforce biases. When there is some form of hierarchy with regards to job opportunities, generally
+            people will want to climb the ladder, as it currently stands Europe and the US have the
+            best prospects when it comes to coding jobs, and as such would attract the best talent regardless of origin.
+            Combine this with companies in theses countries poaching the best talent from around the world and you get a
+            situation where the best gets better and the worst get worse. These people aren’t necessarily self-serving.
+            <br><br>
+            The general populous have foresight. In general, they want the best for people they love; thus, people fear
+            capping their success. You don’t want pay-as-you-go success. People generally want uncapped success. The
+            telemarketer in your head is always urging you to upgrade. And as such the best amongst us will move to
+            where they can fully develop themselves.
+            <br><br>
+            So, is it even possible or worth it to bridge the gap created by the digital divide, will it always be a
+            divide by zero? I guess we’ll find out.
+
+        </p>
+        <h2>
+            References
+        </h2>
+        <p>
+            <a
+                href="https://w3techs.com/technologies/overview/content_language">https://w3techs.com/technologies/overview/content_language</a>
         </p>
     </article>
     <nav class="blogNav"></nav>
