--- a/blogs/blog11.html
+++ b/blogs/blog11.html
@@ -37,7 +37,7 @@
 
             The internet is meant to be the great equaliser. Where everyone is equal, and the prejudice of the real
             world is gone. However, one of the major limiting factors is the devices through which we access the
-            internet Because of the necessity for an internet connection and devices, not everyone has the same level of
+            internet because of the necessity for an internet connection and devices, not everyone has the same level of
             access globally. Even though the original intention was good, cracks have formed, this is known as the
             digital divide. But its more than just access, it extends to the understanding and the creation of content
             on the internet.
