bunch of stuff added

--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -26,11 +26,9 @@
             by Giovanni Suzzi
         </p>
         <figure>
-            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
+            <img src="../images/update.jpg" alt="PlaceHolder">
             <figcaption>
-                Vannevar Bush at a desk
-                </br>
-                From "OEM Defence" during World War 2, United States Treasury, public domain.
+                Image by Gerd Altmann from Pixabay, Free for commercial use.
             </figcaption>
         </figure>
         <p>
