--- a/blogs/blog11.html
+++ b/blogs/blog11.html
@@ -26,11 +26,9 @@
             by Claudio Surmon
         </p>
         <figure>
-            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
+            <img src="../images/TI86_Calculator_DivByZero.jpg" alt="PlaceHolder">
             <figcaption>
-                Vannevar Bush at a desk
-                </br>
-                From "OEM Defence" during World War 2, United States Treasury, public domain.
+                TI86 displaying the divide by zero error, Public domain, Credit: Torindkflt
             </figcaption>
         </figure>
         <p>
@@ -46,38 +44,39 @@
             connections, where certain age groups cannot understand the how these systems work, or even just entire
             areas being restricted from their access. For instance, there are areas of Africa where for a yearly
             subscription to broadband internet costs more than the average yearly salary, up to 50 times as much!
-            (citation to that towards thing).
             <br><br>
             There are numerous factors that could affect these performance metrics. Far too many to list in their
             entirety. As such I will be speculating why these problems perpetuate themselves.
             <br><br>
         </p>
-        <h2>1. It was created in English speaking country for those people</h2>
+        <h2>1. The Internet was created in English speaking country for those people</h2>
         <p>
-            The primary language used on the internet is English, without question, W3Techs estimated the proportion of
+            The primary language used on the internet is English, without question. W3Techs estimated the proportion of
             languages used in the top 10 million websites to be 59.6% English, with the second most being Russian with
             8.6%. This probably came from the fact that the internet was created in an English-speaking country for an
             English-Speaking country. This causes the platform to far more friendly towards English speaking users and
             dissuading other language users.
             <br><br>
-            This is also visible in the actual framework of the internet, where most coding languages used are English
+            This is also visible in the actual framework of the internet. Most coding languages used are English
             based, using the Latin alphabet and English words (like for, if, while etc). This makes it far harder for
             non-native English speakers to learn to code as they must use words or even characters, they are not
             familiar with.
             <br><br>
-            Strangely enough, even though a lot of English based languages are used, some weren’t created in a English
-            speaking territory, like Ruby being from Japan, Lua from Brazil and Python from the Netherlands. In these
+            Strangely enough, even though a lot of English based programming languages are used, some weren’t created in
+            English speaking territories, like Ruby is from Japan, Lua from Brazil and Python from the Netherlands. In
+            these
             cases, the choice of a foreign language being used for the coding was due to wanting to appeal to an
-            international audience. This helps perpetuate the use of English almost exclusively.
+            international audience. This helps perpetuate the use of English almost exclusively. English has become the
+            international language of code, it's too late to change it, so nobody does.
         </p>
         <h2>2. Other countries joined in later, they had less time to create content.</h2>
         <p>
-            If you’re in south Africa accessing a website in the united states, its not like you must go outside get a
+            If you’re in South Africa accessing a website in the united states, its not like you must go outside get a
             compass and point to the USA to get signal, in general internet access is all or nothing. If you’re in range
             of a tower, the location of a website doesn’t matter. (There are cases where proximity to the server
             matters, like gaming, but this is more a time factor over a product quality factor) As such you as a
             consumer would want to use the best services on the internet, regardless of location. However, this causes
-            the side-effect of the largest and best websites (usually US based) to grow larger and reinforces their
+            the side-effect of the largest and best websites (usually US based) growing larger and reinforces their
             monopoly.
             <br><br>
             For example, there are other online video-streaming services besides YouTube, but because YouTube has more
@@ -89,13 +88,14 @@
         <h2>3. Good things attract good people</h2>
         <P>
             Biases reinforce biases. When there is some form of hierarchy with regards to job opportunities, generally
-            people will want to climb the ladder, as it currently stands Europe and the US have the
-            best prospects when it comes to coding jobs, and as such would attract the best talent regardless of origin.
+            people will want to climb the ladder. As it currently stands Europe and the US have the
+            best prospects when it comes to coding jobs, and as such would attract the best talent regardless of their
+            origin.
             Combine this with companies in theses countries poaching the best talent from around the world and you get a
             situation where the best gets better and the worst get worse. These people aren’t necessarily self-serving.
             <br><br>
             The general populous have foresight. In general, they want the best for people they love; thus, people fear
-            capping their success. You don’t want pay-as-you-go success. People generally want uncapped success. The
+            capping their success. They don’t want pay-as-you-go success they want uncapped success. The
             telemarketer in your head is always urging you to upgrade. And as such the best amongst us will move to
             where they can fully develop themselves.
             <br><br>
@@ -107,8 +107,12 @@
             References
         </h2>
         <p>
-            <a
-                href="https://w3techs.com/technologies/overview/content_language">https://w3techs.com/technologies/overview/content_language</a>
+            <a href="https://w3techs.com/technologies/overview/content_language">https://w3techs.com/</a>
+            <br><br>
+            "Towards a study of information geographies:
+            (im)mutable augmentations and a mapping of the
+            geographies of information" by Mark Graham
+            , Stefano De Sabbata and Matthew A. Zook
         </p>
     </article>
     <nav class="blogNav"></nav>
