--- a/blogs/blog12.html
+++ b/blogs/blog12.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        The Black, the White and the Grey
     </title>
 </head>
 
@@ -20,21 +20,57 @@
     <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
-            Template
+            The Black, the White and the Grey
         </h1>
         <p id="info">
             by Claudio Surmon
         </p>
         <figure>
-            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
+            <img src="../images/Artificial_Intelligence.png" alt="Wireframe of a robot holding the letters AI">
             <figcaption>
-                Vannevar Bush at a desk
-                </br>
-                From "OEM Defence" during World War 2, United States Treasury, public domain.
+                Licensed under the Creative Commons Attribution-Share Alike
+                4.0 International, credit: Vaishali1840265
             </figcaption>
         </figure>
         <p>
-
+            Artificial Intelligence in this context, is a system that describes a situation present in a data set (like
+            photos) the theory and development of computer systems able to perform tasks normally requiring human
+            intelligence, such as visual perception, speech recognition, decision-making, and translation between
+            languages. Because Ai is based on data, you need good data to get reliable predictions. However, an AI lacks
+            something humans have, context. This creates a requirement that the data fed into the AI is clean. Clean in
+            this context refers to good data coverage, this is normally replaced with a large amount of data, and
+            complete data. Incomplete data is data that doesn’t contain enough information about the world to replace
+            human knowledge. This can be caused by the lack of availability of better data, incorrect assumptions of
+            machine learning and its outcomes or improper execution of program design.
+            <br><br>
+            Recently there was an AI that was used to differentiate between dogs and wolves. After training, the system
+            had a very good success rate, however, when the system huskies, it identified them as wolves. This was
+            because all the photos of wolves had been on the snow, while the dogs were on grass or similar. So the Ai
+            differentiated between the photos based on the presence of snow.
+            <br><br>
+            Lets imagine you have an AI that scans boxes leaving your factory for damage and would flag any box that had
+            damage on it. If the creator of this AI is careless with the training data, the system may flag any box that
+            is not rectangular, or not see the damage on a darker box. By not making sure the data you have provided is
+            a large amount of clean and complete data, you run the risk of creating programs that create false positives
+            In these cases the outcomes from these mistakes would be harmless, annoying sure but mostly harmless. What
+            if the biased system oversaw something far more important, possibly where people’s lives and well-being is
+            on the line?
+            <br><br>
+            When automated systems are integrated into key parts of society (banks, job applications, etc) extra care
+            needs to be taken to prevent issues to prevent racial or other forms of prejudice being perpetuated. However
+            biases reinforce biases. Any sort of predujice that the system enforces could and would be devastating. If
+            an automated loan application denied your loan solely on skin colour, or a job application gets rejected
+            immediately because of your gender.
+            <br><br>
+            The pattern shows itself repeatedly, reinforcing bad habits within society. It is our duty to train systems
+            not to do that. But for that to happen we would need to train it out of society first.
+        </p>
+        <h2>References</h2>
+        <p>
+            <a
+                href="https://hackernoon.com/dogs-wolves-data-science-and-why-machines-must-learn-like-humans-do-41c43bc7f982">Hackernoon</a><br>
+            <a href="https://www.coursera.org/learn/machine-learning-business-professionals">Machine Learning for
+                Business Professionals by Google Cloud</a><br>
         </p>
     </article>
     <nav class="blogNav"></nav>
