--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -25,7 +25,12 @@
         <p id="info">
             by Claudio Surmon
         </p>
-
+        <figure>
+            <img src="../images/SemanticMarkup.png" alt="An example of html Semantic Markup">
+            <figcaption>
+                An Example of Semantic Markup in HTML, Credit: Claudio Surmon
+            </figcaption>
+        </figure>
         <p>
             Semantics is relating to meaning in language or logic. Semantic markup extends on this idea, by allocating
             meaning to the various tags used in a markup language such as HTML. Although visually, a lot of tags seem
