--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -45,7 +45,16 @@
             these researchers have the luxury of just stopping this research?
 
         </p>
-
+        <figure>
+            <a href="https://twitter.com/jeremyphoward/status/1230610470991589376?ref_src=twsrc%5Etfw">
+                <img src="../images/AITweet.png"
+                    alt="ScreenShot of a tweet talking about the creator of YOLO systems stopping research due to ethical concerns.">
+            </a>
+            <figcaption>
+                ScreenShot of a tweet talking about the creator of YOLO systems stopping research due to ethical
+                concerns.
+            </figcaption>
+        </figure>
 
         <!-- Tweet embedding -->
         <!--
@@ -99,7 +108,11 @@
             been in service in Israel since 2011. This system is designed to intercept and destroy short-range rockets
             and artillery rounds which would impact in a populated Israeli area. By 2014 the system had successfully
             shot down 1200 rockets with a reported success rate of 90%. The system was also helped protect NATO forces
-            in Iraq and Afghanistan. An example of the system in action can be seen in the video below.
+            in Iraq and Afghanistan. An example of the system in action can be seen in <a
+                href=https://youtu.be/hcNE5VHLldY>this video.</a>
+
+        </p>
+        <p>
 
         </p>
         <!--
