fixed home and services

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
     <main>
         <img src="images/Logo-clear-1024.png" alt="Logo">
+        <p>
+            Suzzi Inc was founded in 2015 by Giovanni Suzzi. We have been doing software development and community
+            outreach since then. In our blogs we discuss various interests and concerns about the industry at large. The
+            services we offer include: business analysis, mobile, web and desktop development.
+        </p>
+        <p id="lastestBlog">
+
+        </p>
     </main>
 
     <footer>
