--- a/services/index.html
+++ b/services/index.html
@@ -22,20 +22,22 @@
     <main>
         <h1>Services Offered</h1>
 
-        <h2>
-            Consulting Services
-        </h2>
+        <ul>
+            <li style="text-align: center;">
+                <p>Problem Identification Services</p>
+            </li>
+            <li style="text-align: center;">
+                <p>Platform Identification Services</p>
+            </li>
+            <li style="text-align: center;">
+                <p>Integrated Solution Creation Services</p>
+            </li>
+        </ul>
+
         <p>
-            We offer anything fam
+            To schedule a consultation meeting please see our <a href="/WSOA3028A_1830290/contact/index.html">Contact
+                Us</a> page under Sales
         </p>
-
-        <h2>
-            Software Services
-        </h2>
-
-        <h2>
-            To schedule a meeting please see our contact us page
-        </h2>
     </main>
 
     <footer>
